3tier/front-deployment.yml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: 3-tier-front
  labels:
    app: my-app
spec:
  template:
    metadata:
      labels:
        app: my-app
    spec:
      containers:
        - name: student
          image:  prathammore0025/new:f
          ports:
            - containerPort: 80
          resources:
            requests:
              cpu: 200m
              memory: 100Mi
            limits:
              cpu: 400m
              memory: 200Mi
  replicas: 2
  selector:
    matchLabels:
      app: my-app
  strategy:
    type: RollingUpdate
...

---
apiVersion: v1
kind: Service
metadata:
  name: front-svc
spec:
  ports:
    - port: 80
      targetPort: 80 
      protocol: TCP    
  selector:
    app: my-app
...
