3tier/service.yml
apiVersion: v1
kind: Service
metadata:
  name: my-svc
spec:
  ports:
    - port: 80
      targetPort: 8080 
      protocol: TCP
  type: NodePort    
  selector:
    app: my-app
